serivce-voyage.yaml
apiVersion: v1
kind: Service
metadata:
  name: site-voyage
  namespace: default
spec:
  selector:
    app: nginx-deployment-voyage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
