service-tech.yaml
apiVersion: v1
kind: Service
metadata:
  name: site-tech
spec:
  selector:
    app: nginx-deployment-tech
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
