ingress-cert-manager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: routeur-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - monsite.blog
        - exemple.info
      secretName: mon-tls-secret
  rules:
  - host: "monsite.blog"
    http:
      paths:
        - path: / 
          pathType: Prefix
          backend:
            service:
              name: site-tech
              port:
                number: 80
  - host: "exemple.info"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: site-voyage
              port:
                number: 80
